# open-source-maintainer-risk

./: README.md  parallel_scan.sh  pyproject.toml  risk_report.db
src/: cli.py  explorer.py  ingestion.py  npm_client.py  processing.py  registry_clients.py
tests/: test_registry_clients.py
