[project]
name = "attensi-risk-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "polars>=0.19.0",
    "sqlalchemy>=2.0.44",
    "pyarrow>=22.0.0",
    "pandas>=2.3.3",
    "textual>=6.7.1",
]
[project.scripts]
risk-tool = "src.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
