[project]
name = "attensi-risk-tool"
version = "0.1.0"
description = "A CLI tool that analyzes GitHub repositories for bus factor risk — identifying projects dangerously dependent on a small number of contributors"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Carl Kristensen", email = "ghe@cjckris.com" }
]
maintainers = [
    { name = "Carl Kristensen", email = "ghe@cjckris.com" }
]
keywords = [
    "github",
    "risk-analysis",
    "bus-factor",
    "open-source",
    "maintainer",
    "cli",
    "developer-tools"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed"
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "polars>=0.19.0",
    "sqlalchemy>=2.0.44",
    "pyarrow>=22.0.0",
    "pandas>=2.3.3",
    "textual>=6.7.1",
]
[project.scripts]
risk-tool = "src.cli:app"

[project.urls]
Homepage = "https://github.com/cjckris/attensi-risk-tool"
Repository = "https://github.com/cjckris/attensi-risk-tool"
Documentation = "https://github.com/cjckris/attensi-risk-tool#readme"
"Bug Tracker" = "https://github.com/cjckris/attensi-risk-tool/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
